Correction Collapses Pages About et Home

--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -2,7 +2,7 @@
 
 .banner {
     width: 95%;      
-    margin: 40px;
+    margin: 40px;    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,11 +31,7 @@
 .banner-container {
   position: relative;
   width: 90%;
-  margin: auto;
-  margin-top: 70px;
-  margin-bottom: 120px;  
-  border-radius: 25px;
-  height: 223px;
+  margin: auto;   
   border-radius: 25px;  
 }
 
