--- a/src/components/Collapse/_collapse.scss
+++ b/src/components/Collapse/_collapse.scss
@@ -1,12 +1,20 @@
 // Style SCSS des composants Collapse de la page About
 
-.collapse{
+.collapse {
     background-color: $secondary-color;
     max-width: 1100px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     margin: 0 auto;
-    &_title{
+
+    img { 
+        display: flex;
+        align-self: center;
+        width: 24px;
+        height: 13.71px;
+    }
+
+    &_title {
         display: flex;
         justify-content: space-between;
         align-self: center;
@@ -14,20 +22,24 @@
         color: $tertiary-color;
         border-radius: 10px;
         font-weight: 500;
-        font-size: clamp(13px, 2vw, 18px);
+        font-size: 18px;
         padding: 10px 15px;
         cursor: pointer;
-        .arrow{
+
+        .arrow {
             transition: all 0.2s ease-in-out;           
         }
-        .arrow_up{
+
+        .arrow_up {
             transform: rotate(0deg);
         }
-        .arrow_down{
+
+        .arrow_down {
             transform: rotate(180deg);
         }
     }
-    &_description{ 
+
+    &_description { 
         display: flex;
         flex-direction: column;
         gap: 5px;
@@ -35,17 +47,17 @@
         visibility: visible;
         opacity: 1;
         height: auto;
-        padding: 10px;
-        letter-spacing: 1px;
-        font-size: clamp(12px, 2vw, 16px);
+        padding: 10px;        
+        font-size: 16px;
         color: $primary-color;
         transition: visibility 0.5s ease-in-out,
                     opacity 0.5s ease-in-out,
                     height 0.2s ease-in-out;
     }
-    &_description_hidden{
+
+    &_description_hidden {
         visibility: hidden;
         opacity: 0;
-        height: 0;
+        height: 0px;        
     }
 }
