--- a/src/pages/About/_about.scss
+++ b/src/pages/About/_about.scss
@@ -1,9 +1,10 @@
 // Style SCSS de la page About
 
-.about_main{
-    width: 95%;
+.about_main {
+    width: 75%;
     margin: 0 auto;
-    &_collapse{
+
+    &_collapse {
         margin: 40px auto;        
     }
 }
