--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,57 +1,75 @@
 // Style SCSS de la page d'acceuil
 
-.cards {  
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  color: #F6F6F6;
-  background-color: $secondary-color;
-  border-radius: 25px;  
-  max-width: 1240px;
-  width: 86%;
-  margin: auto;
-  padding: 6px 20px; 
-  }
+  .cards{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;    
+    background-color: $secondary-color;   
+    border-radius: 25px;
+    width: 95%;
+    margin: auto;
 
-  .logements {
-  position: relative;
-  border-radius: 10px;
-  max-width: 340px;
-  height: 340px;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden; 
+    /*@media screen and (max-width: 1200px){
+        gap: 25px; 
+        padding: 25px 15px;       
+    }
+    @media screen and (max-width: 500px){  
+        width: 100%;
+    }*/
 }
 
 .linkCard {
+  display: flex;
   border-radius: 10px;
   padding-left: 0;
-  margin: 50px 30px 0;
+  margin: 50px 30px 0;    
+  width: 30%;
 }
 
-.titre-logements {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  color: $tertiary-color;
-  font-size: 18px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-start;
-  background: $color-gradient;
-  padding: 0 25% 20px 20px;
+.logements {
+    position: relative;        
+    height: 340px;
+    border-radius: 10px;
+    cursor: pointer;
+    overflow: hidden;
+    transition : box-shadow 0.2s ease-in-out;   
+
+    &:hover {
+        box-shadow: 0 2px 8px rgb(0, 0, 0);
+        }
+    
+    /*@media screen and (max-width: 1200px) {
+        width: 50%;   
+    }
+
+    @media screen and (max-width: 900px) {
+        width: 100%;    
+    }
+
+    @media screen and (max-width: 500px) {
+        height: 200px;
+    }*/
 }
 
 .img-logements {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        transition: transform 0.2s ease-in-out;        
 
-.banner {
-  margin-bottom: 50px;
-}
+        &:hover {
+        transform: scale(1.1);  
+        }
+    }
+
+.titre-logements {
+        z-index: 20;
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+        right: 20px;
+        font-weight: 500;
+        font-size: 18px;
+        color: $secondary-color;        
+    }
